# rust-tetris

./: .gitignore  Cargo.toml  README.md  makefile
docs/: rust-tetris.js  rust-tetris_bg.wasm
src/: main.rs  tetris.rs
src/page/: index.html
