[package]
name = "rust-tetris"
version = "0.1.0"
authors = ["Pedro Cardona"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
instant = { version = "0.1.4", features = ["wasm-bindgen", "now"] }
rltk = { version = "0.8.0" }